# qto-categorizer-api

./: .buildinfo  .cruft.json  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/_api/: modules.doctree  qto_categorizer_api.doctree  qto_categorizer_api.endpoints.doctree  qto_categorizer_api.settings.doctree
_api/: modules.html  qto_categorizer_api.endpoints.html  qto_categorizer_api.html  qto_categorizer_api.settings.html
_modules/: index.html
_modules/qto_categorizer_api/: cli.html  errors.html  load_model.html  models.html  setup_logging.html
_modules/qto_categorizer_api/endpoints/: health.html  info.html  predict.html  root.html  test.html
_modules/qto_categorizer_api/settings/: app_settings.html  args.html
_sources/: index.rst.txt
_sources/_api/: modules.rst.txt  qto_categorizer_api.endpoints.rst.txt  qto_categorizer_api.rst.txt  qto_categorizer_api.settings.rst.txt
_static/: conf.py
data/: info.txt
docs/source/: conf.py
qto-categorizer-api-collections/: bruno.json  health.bru  info.bru  predict.bru  root.bru  test.bru
qto-categorizer-api-collections/environments/: local.bru
src/qto_categorizer_api/: app.py  cli.py  load_model.py  models.py  setup_logging.py
src/qto_categorizer_api/endpoints/: health.py  info.py  predict.py  root.py  router.py  test.py
src/qto_categorizer_api/kafka/: consumer.py  producer.py
src/qto_categorizer_api/settings/: app_settings.py  args.py  defaults.py
tasks/: bumpers.mk  checkers.mk  formatters.mk  reporters.mk
